PROGRAMMES-5735 - Fixing broadcast details spacing issue (#247)

--- a/src/DsAmen/Organism/Programme/_collapsed-broadcast.scss
+++ b/src/DsAmen/Organism/Programme/_collapsed-broadcast.scss
@@ -2,12 +2,6 @@
  * Classes specific to a collapsed broadcast object
  */
 
-.broadcast-details__service {
-    span[property='name'] {
-        margin-right: $gel-unit-small / 2;
-    }
-}
-
 .actions-wrapper {
     display: block;
     display: flex;
